<resources>

    <!-- Global strings -->
    <string name="app_name">Vote for us!</string>
    <string name="warning_title">WARNING</string>
    <string name="error_title">ERROR</string>

    <!-- AppBar Menu -->
    <string name="user_settings">Account settings</string>
    <string name="logout_action">Logout</string>
    <string name="back">Back</string>
    <string name="action_close">Close app</string>

    <!-- LoginActivity -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="permissions_erorr_dialog_title">"Permissions not granted</string>
    <string name="permissions_error_dialog_message">You must accept all necessary permissions</string>
    <string name="ok">OK</string>

    <!-- DashboardActivity -->
    <string name="manage_user_button">Manage system users</string>
    <string name="goot_maps_button">Show Maps</string>
    <string name="hello_text">Hello</string>
    <string name="last_login">Last login</string>
    <string name="role_text">Your role</string>

    <!-- EditUserActivity -->
    <string name="username">Username</string>
    <string name="password">New password</string>
    <string name="admin_privileges">Administrative privileges</string>
    <string name="apply">Aplly settings</string>
    <string name="delete_user">Delete user</string>
    <string name="administrative_warning">Your administrative privileges will be turned off</string>
    <string name="settings_applied">Settings successfully apllied</string>
    <string name="edit_password_default">password</string>
    <string name="title_confirm">CONFIRM</string>
    <string name="retype_password">Retype new password to confirm:</string>
    <string name="not_match_err">Passwords do not match</string>
    <string name="users_manage_title">Users</string>
    <string name="add_user">New user</string>
    <string name="add_user_button">Add</string>
    <string name="user_exists">User already exists</string>
    <string name="user_created">User successfully created</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_maps">Map</string>
    <string name="generate_info">Generate number of random voters, in specified radius around your current location</string>
    <string name="voters_number">Number of voters</string>
    <string name="radius">Radius (km):</string>
    <string name="generate_voters_button">Generate</string>
    <string name="goto_generate_voters">Generate random voters DB</string>
    <string name="delete_confirmation">Do you really want to delete this account</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="cancel">Cancel</string>
    <string name="info">INFO</string>
    <string name="user_deleted">User deleted!</string>
    <string name="select_voter">Select voter</string>
    <string name="nonnegative_integers">Number of voters and radius must be non-negative integrals</string>
    <string name="voters_generated">Voters DB successfully generated</string>
    <string name="generate_permissions">To generate DB, administrative permissions are necessary</string>
    <string name="voter_marker">voter</string>
    <string name="voters_marker">voters</string>
    <string name="openness_feature">Openness</string>
    <string name="conscientiousness_feature">Conscientiousness</string>
    <string name="extraversion_feature">Extraversion</string>
    <string name="agreeableness_feature">Agreeableness</string>
    <string name="neuroticism_feature">Neuroticism</string>
    <string name="leadership_feature">Leadership potential</string>
    <string name="orientation_feature">Orientation</string>
    <string name="affiliation_feature">Affiliation</string>
    <string name="no_known_voters">No known voters here</string>
    <string name="useful_resources">Useful resources</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="heterosexual">Heterosexual</string>
    <string name="homosexual">Homosexual</string>
    <string name="bisexual">Bisexual</string>
    <string name="asexual">Asexual</string>
    <string name="unknown">Unknown</string>
    <string name="years_old">yo</string>
    <string name="settings">Settings</string>
    <string name="datasource">Data source</string>
    <string name="default_datasource">http://s2.brodzki.org</string>
    <string name="proximity_thresholds">Proximity thresholds</string>
    <string name="low_proximity">Low proximity (%)</string>
    <string name="high_proximity">High proximity (%)</string>
    <string name="global_settings">Global settings</string>
    <string name="float_invalid">Thresholds must be valid float numbers!</string>
    <string name="proximity_title">Proximity</string>
    <string name="invalid_percent">Valid percents must be in range 0..100</string>
    <string name="optimal_candidate">Optimal candidate</string>

</resources>
